[package]
name = "tls_echo"
version = "0.1.0"
authors = ["Jorge Luna <seguidor777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.1"
openssl = "0.10.26"
tokio = { version = "0.2.4", features = ["full"] }
tokio-openssl = "0.4.0"